k8s/producao/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickfood-backend-producao-service
  namespace: quickfood
  labels:
    app: quickfood-backend-producao
spec:
  selector:
    app: quickfood-backend-producao
  ports:
    - protocol: TCP
      port: 84
      targetPort: 84
  type: ClusterIP
