k8s/producao/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickfood-backend-producao-ingress
  namespace: quickfood
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: producao.quickfood.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quickfood-backend-producao-service
            port:
              number: 84
